# Python-Compgraph

compgraph/: LIB_README.md  pyproject.toml
compgraph/compgraph/: algorithms.py  external_sort.py  graph.py
compgraph/compgraph.egg-info/: PKG-INFO  SOURCES.txt
compgraph/compgraph/operations/: __init__.py  operations_base.py  operations_joiners.py  operations_mappers.py  operations_reducers.py
compgraph/examples/: run_inverted_index.py  run_pmi.py  run_word_count.py  run_yandex_maps.py
compgraph/tests/: test_examples.py  test_graph.py  test_operations.py
compgraph/tests/correctness/: test_operations.py
compgraph/tests/data_for_examples/answers/: inverted_index.jsonl  pmi.jsonl  word_count.jsonl  yandex_maps.jsonl
compgraph/tests/data_for_examples/canondata/: road_graph_data.jsonl  text_corpus.jsonl  travel_times.jsonl
compgraph/tests/memory/: test_algorithms.py  test_operations.py
