[project]
name = 'compgraph'
version = '1.0.0'
authors = [{name='Sofia Bondar', email='bondar.sd@phystech.edu'}]
description = 'A small library for building computational graphs in MapReduce paradigm'
keywords = ['compgraph']
readme = 'LIB_README.md'
classifiers = [
    "Programming Language :: Python :: 3",
]
[build-system]
requires = ["setuptools", "wheel>=0.27"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["compgraph"]
